--- a/index.html
+++ b/index.html
@@ -62,16 +62,19 @@
       <div
         class="flex flex-col justify-center items-center h-full w-full bg-gradient-to-r from-sky-600 to-white bg-clip-text text-transparent drop-shadow-2xl"
       >
-        <h1 class="font-semibold text-5xl md:text-6xl lg:text-9xl">IXDIM</h1>
-        <p class="lg:text-2xl text-lg pb-3 text-center">
-          Temukan Keistimewaan di Setiap Jahitan bersama kami
-        </p>
-        <p
+        <img src="img/logo-w-frame.png" alt="IXDIM-LOGO" />
+        <!-- <p
           id="hero-text"
           class="lg:w-1/2 lg:text-lg w-9/12 text-md text-center pb-8"
         >
           Melayani pembuatan seragam berupa kaos, kemeja, rompi, jaket, topi,
           celana, apron, dan berbagai produk lainnya.
+        </p> -->
+        <p
+          id="hero-text"
+          class="lg:w-1/2 lg:text-2xl w-9/12 text-md text-center pb-8"
+        >
+          <span id="typed-text"></span><span id="cursor">|</span>
         </p>
         <a
           href=""
@@ -82,6 +85,73 @@
       </div>
     </section>
     <!-- Hero End -->
+
+    <!-- Slider Start -->
+    <section class="sec-7 container mx-auto p-5">
+      <div
+        class="flex flex-col justify-center items-center w-[50rem] mx-auto rounded-tl-lg rounded-tr-lg"
+      >
+        <img
+          class="mySlides w-full h-[45rem] rounded-tl-lg rounded-tr-lg hidden"
+          src="img/slider/slide-1.PNG"
+        />
+        <img
+          class="mySlides w-full h-[45rem] rounded-tl-lg rounded-tr-lg"
+          src="img/slider/slide-2.PNG"
+        />
+        <img
+          class="mySlides w-full h-[45rem] rounded-tl-lg rounded-tr-lg hidden"
+          src="img/slider/slide-3.PNG"
+        />
+        <img
+          class="mySlides w-full h-[45rem] rounded-tl-lg rounded-tr-lg hidden"
+          src="img/slider/slide-4.PNG"
+        />
+        <img
+          class="mySlides w-full h-[45rem] rounded-tl-lg rounded-tr-lg hidden"
+          src="img/slider/slide-5.PNG"
+        />
+
+        <div class="row-padding flex">
+          <div class="w3-col s4">
+            <img
+              class="demo w-full cursor-pointer"
+              src="img/slider/slide-1.PNG"
+              onclick="currentDiv(1)"
+            />
+          </div>
+          <div class="w3-col s4">
+            <img
+              class="demo w-full cursor-pointer"
+              src="img/slider/slide-2.PNG"
+              onclick="currentDiv(2)"
+            />
+          </div>
+          <div class="w3-col s4">
+            <img
+              class="demo w-full cursor-pointer"
+              src="img/slider/slide-3.PNG"
+              onclick="currentDiv(3)"
+            />
+          </div>
+          <div class="w3-col s4">
+            <img
+              class="demo w-full cursor-pointer"
+              src="img/slider/slide-4.PNG"
+              onclick="currentDiv(4)"
+            />
+          </div>
+          <div class="w3-col s4">
+            <img
+              class="demo w-full cursor-pointer"
+              src="img/slider/slide-5.PNG"
+              onclick="currentDiv(5)"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Slider End -->
 
     <!-- Pelayanan / Service Start -->
     <section
@@ -626,10 +696,11 @@
       class="sec-6 follow flex flex-col justify-center items-center py-16"
     >
       <div class="flex justify-center items-center gap-12">
-        <div class="w-40 h-1 bg-black"></div>
-        <h2 class="text-4xl font-semibold">Follow us on Instagram</h2>
-        <div class="w-40 h-1 bg-black"></div>
+        <h2 class="text-4xl font-semibold whitespace-nowrap">
+          Follow us on Instagram
+        </h2>
       </div>
+
       <a
         href="https://www.instagram.com/ixdim.collection/"
         target="_blank"
