Revisi bagian footer

--- a/index.html
+++ b/index.html
@@ -62,7 +62,11 @@
       <div
         class="flex flex-col justify-center items-center h-full w-full bg-gradient-to-r from-sky-600 to-white bg-clip-text text-transparent drop-shadow-2xl"
       >
-        <img src="img/logo-w-frame.png" alt="IXDIM-LOGO" />
+        <img
+          src="img/logo-w-frame.png"
+          alt="IXDIM-LOGO"
+          class="w-40 md:w-48 lg:w-56 xl:w-64 mb-8"
+        />
         <p
           id="hero-text"
           class="lg:w-1/2 lg:text-2xl w-9/12 text-md text-center pb-8"
@@ -71,7 +75,7 @@
         </p>
         <a
           href="#sec-2"
-          class="animate hero-button bg-sky-900 text-white text-2xl p-3 rounded-sm ease-in ease-in-out duration-300 border-2 border-sky-400 text-medium text-sky-900 hover:bg-white hover:text-sky-900"
+          class="animate hero-button bg-sky-900 text-white text-lg md:text-xl lg:text-2xl xl:text-3xl p-3 rounded-sm ease-in ease-in-out duration-300 border-2 border-sky-400 text-medium text-sky-900 hover:bg-white hover:text-sky-900"
         >
           Selengkapnya
         </a>
@@ -334,10 +338,6 @@
       class="sec-4 p-8 flex flex-col justify-center items-center bg-sky-800"
     >
       <h2 class="animate font-semibol text-4xl text-white mb-4">Testimoni</h2>
-      <p class="animate text-center mb-10 text-white">
-        Dengan beragam pilihan bahan, variasi desain, kualitas cetakan, dan
-        teknik bordir yang tersedia.
-      </p>
       <div
         class="animate card-tes-frame flex flex-wrap justify-center gap-8 pt-10"
       >
@@ -787,12 +787,7 @@
     <footer
       class="flex flex-col lg:flex-row items-center justify-center lg:justify-between gap-4 bg-gray-800 text-white h-32 px-6 lg:px-20"
     >
-      <div
-        class="hidden items-center justify-center lg:flex lg:justify-start lg:w-96"
-      >
-        <img src="img/logo.png" alt="IXDIM Logo" class="w-12" />
-        <h1 class="text-lg font-semibold ml-4">IXDIM COLLECTION</h1>
-      </div>
+      <img src="img/logo.png" alt="IXDIM Logo" class="w-12" />
       <p class="text-sm lg:w-auto text-center lg:text-left">
         Copyright © 2024 IXDIM COLLECTION
       </p>
