--- a/kemeja.html
+++ b/kemeja.html
@@ -290,23 +290,13 @@
     <!-- Follow US End -->
 
     <footer
-      class="flex flex-col lg:flex-row items-center justify-center gap-4 bg-gray-800 text-white h-32 px-20"
+      class="flex flex-col lg:flex-row items-center justify-center lg:justify-between gap-4 bg-gray-800 text-white h-32 px-6 lg:px-20"
     >
-      <div class="items-center w-96 hidden lg:flex">
-        <img src="img/logo.png" alt="IXDIM Logo" class="w-12" />
-        <h1 class="text-lg font-semibold ml-4">IXDIM COLLECTION</h1>
-      </div>
-
-      <div class="flex justify-center w-full pl-30">
-        <div class="menu flex gap-5">
-          <a href="">Home</a>
-          <a href="">About</a>
-          <a href="">Portfolio</a>
-          <a href="">Blog</a>
-          <a href="">Kontak</a>
-        </div>
-      </div>
-      <p class="text-sm lg:w-96">Copyright © 2024 IXDIM COLLECTION</p>
+      <img src="img/logo.png" alt="IXDIM Logo" class="w-12" />
+      <p class="text-sm lg:w-auto text-center lg:text-left">
+        Copyright © 2024 IXDIM COLLECTION
+      </p>
+      <a href="#" class="underline hidden lg:inline-block">Back to top</a>
     </footer>
 
     <script src="js/script.js"></script>
