--- a/product.html
+++ b/product.html
@@ -58,12 +58,12 @@
 
     <!-- Product Start -->
     <section
-      class="sec-3 flex flex-col justify-center items-center py-5 lg:py-24 bg-gray-200"
+      class="flex flex-col justify-center items-center py-5 lg:py-24 bg-gray-200"
     >
       <h1
         class="animate text-3xl lg:text-4xl lg:pb-10 lg:pt-20 font-mediu text-center"
       >
-        Kategori
+        Kategori Produk
       </h1>
       <div
         class="animate container mx-auto grid grid-cols-2 sm:grid-cols-2 lg:grid-cols-4 xl:grid-cols-4 gap-4 lg:gap-8 p-2 lg:p-5"
@@ -76,7 +76,7 @@
             style="max-width: 100%; height: auto"
           />
           <a
-            href=""
+            href="jacket.html"
             class="absolute bottom-0 left-0 w-full bg-black bg-opacity-50 text-white text-center py-1 lg:py-2 text-sm lg:text-base"
             >Jaket</a
           >
@@ -89,7 +89,7 @@
             style="max-width: 100%; height: auto"
           />
           <a
-            href=""
+            href="kaos.html"
             class="absolute bottom-0 left-0 w-full bg-black bg-opacity-50 text-white text-center py-1 lg:py-2 text-sm lg:text-base"
             >Kaos</a
           >
@@ -102,7 +102,7 @@
             style="max-width: 100%; height: auto"
           />
           <a
-            href=""
+            href="kemeja.html"
             class="absolute bottom-0 left-0 w-full bg-black bg-opacity-50 text-white text-center py-1 lg:py-2 text-sm lg:text-base"
             >Kemeja</a
           >
@@ -115,17 +115,12 @@
             style="max-width: 100%; height: auto"
           />
           <a
-            href=""
+            href="rompi.html"
             class="absolute bottom-0 left-0 w-full bg-black bg-opacity-50 text-white text-center py-1 lg:py-2 text-sm lg:text-base"
             >Rompi</a
           >
         </div>
       </div>
-      <a
-        href=""
-        class="w-32 lg:w-40 h-10 lg:h-12 mt-6 lg:mt-10 mb-6 lg:mb-10 bg-gray-400 shadow-lg transition ease-linear duration-200 hover:bg-gray-300 flex justify-center items-center rounded-md text-white text-sm lg:text-base"
-        >Lebih banyak lagi</a
-      >
     </section>
     <!-- Product End -->
 
