--- a/kemeja.html
+++ b/kemeja.html
@@ -58,7 +58,7 @@
 
     <!-- Product Start -->
     <section
-      class="sec-3 flex flex-col justify-center items-center mt-10 px-4 lg:px-10 py-8 lg:py-16"
+      class="flex flex-col justify-center items-center mt-10 px-4 lg:px-10 py-8 lg:py-16"
     >
       <h1
         class="animate text-3xl lg:text-4xl font-medium text-center mb-8 lg:mb-12"
