Menambahka animasi hover pada navigasi menu

--- a/about.html
+++ b/about.html
@@ -60,30 +60,13 @@
     <section
       class="flex flex-col justify-center items-center mt-10 px-4 lg:px-10 py-8 lg:py-16"
     >
-      <h1
-        class="animate text-3xl lg:text-4xl font-medium text-center mb-8 lg:mb-12"
-      >
-        Produk Kaos
-      </h1>
-      <div class="kaos flex flex-wrap justify-center gap-8">
-        <div class="kaos-item flex flex-col items-center gap-5 max-w-[300px]">
-          <img src="img/Kaos/IMG_3235.png" alt="kaos-1" class="w-full" />
-          <div class="kaos-details flex flex-col gap-5">
-            <h2 class="text-xl lg:text-2xl">Kaos 1</h2>
-            <p class="text-lg">Rp.200.000</p>
-            <ul class="text-base text-gray-500">
-              <li>Bahan : American, Japan, Ventura Drill</li>
-              <li>Branding : Bordir Komputer</li>
-              <li>Jahit : Kumis dan Rantai</li>
-            </ul>
-            <a
-              href="#"
-              target="_blank"
-              class="bg-green-400 px-3 py-4 text-white text-center"
-              >Pesan Sekarang</a
-            >
-          </div>
-        </div>
+      <div>
+        <img src="" alt="" />
+        <h1
+          class="animate text-3xl lg:text-4xl font-medium text-center mb-8 lg:mb-12"
+        >
+          Tentang Kami
+        </h1>
       </div>
     </section>
 
