--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Navbar-menu Start -->
     <!-- Desktop -->
     <nav
-      class="absolute top-0 left-0 right-0 hidden sm:hidden md:hidden lg:flex justify-between items-center text-white pt-4 pb-4 z-50"
+      class="nav-menu-d absolute top-0 left-0 right-0 hidden sm:hidden md:hidden lg:flex justify-between items-center text-white pt-4 pb-4 z-50"
     >
       <div class="flex gap-5 justify-center items-center pl-20">
         <img src="img/logo.png" alt="" class="w-12" />
@@ -34,7 +34,7 @@
 
     <!-- Mobile -->
     <nav
-      class="fixed bg-gray-800 top-0 left-0 right-0 lg:hidden sm:flex md:flex flex justify-between items-center text-white pt-4 pb-4 z-50"
+      class="nav-menu-m fixed bg-gray-800 top-0 left-0 right-0 lg:hidden sm:flex md:flex flex justify-between items-center text-white pt-4 pb-4 z-50"
     >
       <div class="flex gap-5 justify-center items-center pl-20">
         <img src="img/logo.png" alt="" class="w-12" />
