Menambahkan halaman about

--- a/about.html
+++ b/about.html
@@ -60,13 +60,52 @@
     <section
       class="flex flex-col justify-center items-center mt-10 px-4 lg:px-10 py-8 lg:py-16"
     >
-      <div>
+      <div class="max-w-7xl mx-auto">
         <img src="" alt="" />
         <h1
-          class="animate text-3xl lg:text-4xl font-medium text-center mb-8 lg:mb-12"
+          class="animate text-3xl lg:text-4xl mt-10 font-medium text-center mb-8 lg:mb-12 underline"
         >
-          Tentang Kami
+          IXDIM COLLECTION STORY
         </h1>
+        <div class="flex flex-col lg:flex-row lg:gap-10">
+          <img
+            src="img/about/IMG_20201024_101815.jpg"
+            alt="about-image"
+            class="w-full lg:w-1/2 h-auto lg:h-[45rem]"
+          />
+          <div class="flex flex-col gap-4 lg:w-1/2">
+            <h2 class="text-2xl font-semibold">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </h2>
+            <p class="text-justify">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non
+              animi eius laudantium qui. Enim ex unde debitis. Nam dolore unde
+              illum rem ullam error iste laboriosam. Voluptatem aliquid iusto
+              doloremque sunt est suscipit libero obcaecati temporibus
+              consequuntur reprehenderit. Sequi id vitae odit sapiente explicabo
+              impedit. Earum minima itaque facere at praesentium magnam nobis
+              eius, eos obcaecati dolorem dolore ad inventore dolores voluptatum
+              deserunt reprehenderit perspiciatis?
+            </p>
+            <p class="text-justify">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni
+              qui possimus id maiores, dolore sequi sit earum rem temporibus
+              perspiciatis.
+            </p>
+            <p class="text-justify">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Veritatis omnis sequi adipisci rerum quaerat a mollitia quae
+              saepe, nobis minima repudiandae modi nisi culpa in, sapiente enim
+              dolor? Aut impedit consequuntur vero molestiae illum magnam
+              similique quaerat repellat temporibus repellendus aperiam, iusto,
+              eaque obcaecati aliquam esse, error consequatur explicabo porro?
+            </p>
+            <p class="text-justify">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Consequatur suscipit quia labore asperiores. Quae, ratione.
+            </p>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -162,8 +201,12 @@
     <section
       class="sec-6 follow flex flex-col justify-center items-center py-16"
     >
-      <div class="flex justify-center items-center gap-12">
-        <h2 class="text-4xl font-semibold whitespace-nowrap">
+      <div
+        class="flex justify-center items-center gap-12 md:flex-col md:items-center md:gap-0"
+      >
+        <h2
+          class="text-xl lg:text-2xl font-semibold whitespace-nowrap text-center md:text-left"
+        >
           Follow us on Instagram
         </h2>
       </div>
@@ -177,11 +220,31 @@
 
       <!-- Desktop -->
       <div class="ig-content hidden md:flex pt-10 justify-center">
-        <img src="img/ig-content/content-1.PNG" alt="" class="w-1/5 md:w-1/5" />
-        <img src="img/ig-content/content-2.PNG" alt="" class="w-1/5 md:w-1/5" />
-        <img src="img/ig-content/content-3.PNG" alt="" class="w-1/5 md:w-1/5" />
-        <img src="img/ig-content/content-4.PNG" alt="" class="w-1/5 md:w-1/5" />
-        <img src="img/ig-content/content-5.PNG" alt="" class="w-1/5 md:w-1/5" />
+        <img
+          src="img/ig-content/content-1.PNG"
+          alt=""
+          class="w-1/5 md:w-1/6 lg:w-1/6"
+        />
+        <img
+          src="img/ig-content/content-2.PNG"
+          alt=""
+          class="w-1/5 md:w-1/6 lg:w-1/6"
+        />
+        <img
+          src="img/ig-content/content-3.PNG"
+          alt=""
+          class="w-1/5 md:w-1/6 lg:w-1/6"
+        />
+        <img
+          src="img/ig-content/content-4.PNG"
+          alt=""
+          class="w-1/5 md:w-1/6 lg:w-1/6"
+        />
+        <img
+          src="img/ig-content/content-5.PNG"
+          alt=""
+          class="w-1/5 md:w-1/6 lg:w-1/6"
+        />
       </div>
 
       <!-- Mobile -->
@@ -192,7 +255,22 @@
           class="w-1/2 md:w-1/3 lg:w-1/4"
         />
         <img
+          src="img/ig-content/content-2.PNG"
+          alt=""
+          class="w-1/2 md:w-1/3 lg:w-1/4"
+        />
+        <img
           src="img/ig-content/content-3.PNG"
+          alt=""
+          class="w-1/2 md:w-1/3 lg:w-1/4"
+        />
+        <img
+          src="img/ig-content/content-4.PNG"
+          alt=""
+          class="w-1/2 md:w-1/3 lg:w-1/4"
+        />
+        <img
+          src="img/ig-content/content-5.PNG"
           alt=""
           class="w-1/2 md:w-1/3 lg:w-1/4"
         />
