Revisi navigasi menu

--- a/jacket.html
+++ b/jacket.html
@@ -25,10 +25,10 @@
         <h1>IXDIM COLLECTION</h1>
       </div>
       <div class="flex justify-center items-center gap-5 pr-20">
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Produk</a>
-        <a href="#">Kontak</a>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="product.html">Produk</a>
+        <a href="#sec-kontak">Kontak</a>
       </div>
     </nav>
 
