--- a/product.html
+++ b/product.html
@@ -25,10 +25,10 @@
         <h1>IXDIM COLLECTION</h1>
       </div>
       <div class="flex justify-center items-center gap-5 pr-20">
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Produk</a>
-        <a href="#">Kontak</a>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="product.html">Produk</a>
+        <a href="#sec-kontak">Kontak</a>
       </div>
     </nav>
 
@@ -43,10 +43,10 @@
       <div
         class="nav-mobile absolute top-20 left-full bg-gray-100 text-black w-full transition-all ease-linear p-5 flex flex-col gap-5"
       >
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Produk</a>
-        <a href="#">Kontak</a>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="product.html">Produk</a>
+        <a href="#sec-kontak">Kontak</a>
       </div>
       <div class="pr-20">
         <div class="bg-gray-700 p-1 rounded-full">
